# ETHSimulator

./: README.md  analysis.ipynb  experiment.py  genesis.json  network_params.yaml  players.json  pyproject.toml
ethsimulator/: __init__.py  account_creation.py  service_manager.py  simulator.py  transaction_manager.py  transaction_simulator.py
new_results/: config_singlenode-eoatx-ethereumjs.yaml  singlenode-deploy-destruct-besu_cpu_iowait_seconds_total.parquet  singlenode-deploy-destruct-besu_cpu_system_seconds_total.parquet  singlenode-deploy-destruct-besu_cpu_threads.parquet  singlenode-deploy-destruct-besu_cpu_user_seconds_total.parquet  singlenode-deploy-destruct-besu_disk_node_reads_total.parquet  singlenode-deploy-destruct-besu_disk_node_writes_total.parquet  singlenode-deploy-destruct-besu_eth_exe_block_head_gas_used.parquet  singlenode-deploy-destruct-besu_eth_exe_gas_price_gwei.parquet  singlenode-deploy-destruct-besu_network_node_bytes_total_received.parquet  singlenode-deploy-destruct-besu_process_cpu_seconds_total.parquet  singlenode-deploy-destruct-erigon_cpu_iowait_seconds_total.parquet  singlenode-deploy-destruct-erigon_cpu_system_seconds_total.parquet  singlenode-deploy-destruct-erigon_cpu_threads.parquet  singlenode-deploy-destruct-erigon_cpu_user_seconds_total.parquet  singlenode-deploy-destruct-erigon_disk_node_reads_total.parquet  singlenode-deploy-destruct-erigon_disk_node_writes_total.parquet  singlenode-deploy-destruct-erigon_eth_exe_block_head_gas_used.parquet  singlenode-deploy-destruct-erigon_eth_exe_gas_price_gwei.parquet  singlenode-deploy-destruct-erigon_network_node_bytes_total_received.parquet  singlenode-deploy-destruct-erigon_process_cpu_seconds_total.parquet  singlenode-deploy-destruct-ethereumjs_cpu_iowait_seconds_total.parquet  singlenode-deploy-destruct-ethereumjs_cpu_system_seconds_total.parquet  singlenode-deploy-destruct-ethereumjs_cpu_threads.parquet  singlenode-deploy-destruct-geth_cpu_threads.parquet  (+156 more)
(+791 files in other folders)
