[project]
name = "ethsimulator"
version = "0.1.0"
description = ""
authors = [
    {name = "carlonlv",email = "carlonlv@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "eth-account (>=0.13.5,<0.14.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "web3 (>=7.9.0,<8.0.0)",
    "types-psutil (>=7.0.0.20250218,<8.0.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scipy-stubs (>=1.15.2.1,<2.0.0.0)",
    "basemodel (>=20190604.1625,<20190605.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "prometheus-api-client (>=0.5.7,<0.6.0)",
    "types-pyyaml (>=6.0.12.20241230,<7.0.0.0)",
    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
